--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,6 +16,6 @@ steps:
       - 'deployment-file=gcr.io/rb-munish-playground/flaskcode'
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
-      - 'CLOUDSDK_CONTAINER_CLUSTER= publicclut'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=publicclut'
 options:
   logging: CLOUD_LOGGING_ONLY
