--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,8 +12,8 @@ steps:
     args:
       - 'set'
       - 'image'
-      - 'deployment/deployment-file'
-      - 'deployment-file=gcr.io/rb-munish-playground/flaskcode'
+      - 'gcr.io/rb-munish-playground/flaskcode'
+      - 'deployment-file=deployment.yaml'
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=publicclut'
