--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
       - 'set'
       - 'image'
       - 'deployment/deployment-file'
-      - 'deployment-file=gcr.io/rb-munish-playground/flaskcode'
+      - 'flaskcode=gcr.io/rb-munish-playground/flaskcode'
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=publicclut'
