--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,5 +17,19 @@ steps:
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=publicclut'
+  - name: "gcr.io/cloud-builders/gcloud"
+    args:
+      [
+        "run",
+        "deploy",
+        "flaskcode",
+        "--image",
+        "gcr.io/rb-munish-playground/poddeploy:latest",
+        "--region",
+        "us-central1",
+        "--platform",
+        "managed",
+        "--allow-unauthenticated",
+      ]
 options:
   logging: CLOUD_LOGGING_ONLY
